--- a/17/index.html
+++ b/17/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
+	</head>
 <body>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="">
-	<h1> Hola </h2>
+	<h1> Hola </h1>
 
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet voluptate voluptas odit, sapiente soluta consectetur consequuntur ex est dolores laboriosam repudiandae unde repellat velit quo voluptatibus consequatur perferendis, tempore sunt!
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet voluptate voluptas odit, sapiente soluta consectetur consequuntur ex est dolores laboriosam repudiandae unde repellat velit quo voluptatibus consequatur perferendis, tempore sunt!
 	</p>
 
 	<a href="desafiolatam.com" ><img alt="logo.png"> </a>
@@ -17,5 +19,5 @@
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ex, enim ipsum sequi. Dignissimos libero unde repellendus fugit quidem asperiores, veritatis aliquid vel, a eveniet praesentium labore quia dolor, accusamus?
 	</p>
 </body>
-</head>
-<html>
+
+</html>
