--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+	<div style="color:green"
+    <title> Go Green </title>
+</div>
 </head>
 <body>
     <p> Hellowww </p>
