--- a/22/index.html
+++ b/22/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title></title>
 	<meta charset="utf-8">
-	<style "color:yellow">
+	<style>
+	p{ color:yellow; }
+	</style>	
 </head>
 <body>
 	<div>
 		<p > Hellowww </p>
-		<p> Lorem ipsum dolor sit amet. </p>
+		<p  > Lorem ipsum dolor sit amet. </p>
 	</div>
 </body>
 </html>
