--- a/25/index.html
+++ b/25/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
+	<img src="images/logo.png" alt="logo desafio latam" style="height: 500px;">
 	<img src="images/logo.png" alt="logo desafio latam" >
 
 </body>
